# CppNumericalSolvers

./: CMakeLists.txt  TestLists.txt  dummy.cpp
include/: meta.h  observableproblem.h  problem.h  problemobserver.h
include/cppoptlib/linesearch/: armijowolfe.h  smallestvectorinconvexhullfinder.h
include/cppoptlib/solver/: bfgsnssolver.h  lbfgssolver.h  newtonraphsonsolver.h
include/cppoptlib/tests/unit_tests/: ABFGSNSSolverTest.cpp  ALBFGSSolverTest.cpp  ALbfgsSolverTest.cpp  ANewtonRaphsonSolverTest.cpp  ASmallestVectorInConvexHullFinderTest.cpp  TestProblems.cpp  TestProblems.h  benchmark.cpp
include/linesearch/: armijowolfe.h  smallestvectorinconvexhullfinder.h
include/overshootCorrection/: steplengthlimiter.h  umrigarcorrection.h
include/solver/: bfgsnssolver.h  bfgssolver.h  cmaesbsolver.h  cmaessolver.h  conjugatedgradientdescentsolver.h  gradientdescentnssolver.h  gradientdescentsimplesolver.h  gradientdescentsolver.h  gradientdescentumrigarlimitedsteplength.h  lbfgsbsolver.h  lbfgssolver.h  newtondescentsolver.h  newtonraphsonsolver.h  timeintegrationsolver.h
include/tests/: CMakeLists.txt
include/tests/unit_tests/: ABfgsNsSolverTest.cpp  ALbfgsSolverTest.cpp  ANewtonRaphsonSolverTest.cpp  ASmallestVectorInConvexHullFinderTest.cpp  ATimeIntegrationSolverTest.cpp  Playground.cpp  TestProblems.cpp  benchmark.cpp
include/timeintegration/: firealgorithm.h  rungekuttafourthorder.h  velocityverlet.h
src/: verify.cpp
